# ChangeLog for media-fonts/acroread-asianfonts
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/acroread-asianfonts/ChangeLog,v 1.17 2007/03/19 14:38:44 genone Exp $

  19 Mar 2007; Marius Mauch <genone@gentoo.org>
  acroread-asianfonts-7.0.20050728.ebuild:
  Replacing einfo with elog

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 Jul 2006; Alastair Tse <liquidx@gentoo.org>
  -acroread-asianfonts-5.0.20020815.ebuild,
  acroread-asianfonts-7.0.20050728.ebuild:
  security cleanup (#123925)

  07 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
  acroread-asianfonts-5.0.20020815.ebuild,
  acroread-asianfonts-7.0.20050728.ebuild:
  Add linguas to IUSE, bug 136953

*acroread-asianfonts-7.0.20050728 (08 Nov 2005)

  08 Nov 2005; MATSUU Takuto <matsuu@gentoo.org>
  +acroread-asianfonts-7.0.20050728.ebuild:
  Version bumped. Bug 109798.

  25 Sep 2005; MATSUU Takuto <matsuu@gentoo.org>
  -acroread-asianfonts-7.0.20020815.ebuild:
  acroread-7* have no use for acroread-asianfonts.

  01 Apr 2005; Mamoru KOMACHI <usata@gentoo.org>
  acroread-asianfonts-5.0.20020815.ebuild,
  acroread-asianfonts-7.0.20020815.ebuild:
  Fixed another typo on zh_CN :( This closes bug #87054.

  29 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  acroread-asianfonts-5.0.20020815.ebuild,
  acroread-asianfonts-7.0.20020815.ebuild:
  Fixed a typo; bug #87044.

  28 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  acroread-asianfonts-5.0.20020815.ebuild,
  acroread-asianfonts-7.0.20020815.ebuild,
  -acroread-asianfonts-20020815.ebuild:
  Forgot the last negation in pkg_setup() :/

*acroread-asianfonts-7.0.20020815 (28 Mar 2005)
*acroread-asianfonts-5.0.20020815 (28 Mar 2005)

  28 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  +acroread-asianfonts-5.0.20020815.ebuild,
  +acroread-asianfonts-7.0.20020815.ebuild:
  Temporal asianfont pack corresponding to Acroread 7; bug #86181.