@@ -1,0 +1,12 @@
+MD5 4571e19adbe7202b7593f337742eeef3 FontPack708_chs_i386-linux.tar.gz 14118337
+RMD160 b2fb81cf31451a9cb08e6eee930f99be9ebe50ed FontPack708_chs_i386-linux.tar.gz 14118337
+SHA256 a39342d7c017315eb92b93c289bd9ef9c2601f2fd6033c7968fc34d9a50540c2 FontPack708_chs_i386-linux.tar.gz 14118337
+MD5 8dff8bbeaa4c679655784263882f0f87 FontPack708_cht_i386-linux.tar.gz 9713040
+RMD160 dbdffbf834702c0b95aca5e358fba9abb2fde83c FontPack708_cht_i386-linux.tar.gz 9713040
+SHA256 48f16485c192aa5f77cb2c42869f5484b058b71c4631c6d8f1ad7c8d22ebf40d FontPack708_cht_i386-linux.tar.gz 9713040
+MD5 b0bd286409a4bcf34c831fe41c208370 FontPack708_jpn_i386-linux.tar.gz 11268460
+RMD160 78d30b947ce6d17e56e19f6126f53fcfa43dd2c0 FontPack708_jpn_i386-linux.tar.gz 11268460
+SHA256 5621ce6c8e129bc530cfcb4de58bd9d618dda28a69830237dfef7acd93023238 FontPack708_jpn_i386-linux.tar.gz 11268460
+MD5 045fbc3eb8f38da5e1aeec326fdedaa0 FontPack708_kor_i386-linux.tar.gz 5938528
+RMD160 c11cb71f467c3ecd8332ff3a0012989f5cfb2850 FontPack708_kor_i386-linux.tar.gz 5938528
+SHA256 2057a084d5a89dfe2f01d68a68accd09dac88e89620276dcb95a6f1c8f052e76 FontPack708_kor_i386-linux.tar.gz 5938528
