@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/acroread-asianfonts
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/acroread-asianfonts/ChangeLog,v 1.17 2007/03/19 14:38:44 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/acroread-asianfonts/ChangeLog,v 1.18 2007/04/08 00:40:27 matsuu Exp $
+
+*acroread-asianfonts-7.0.8 (08 Apr 2007)
+
+  08 Apr 2007; MATSUU Takuto <matsuu@gentoo.org>
+  +acroread-asianfonts-7.0.8.ebuild:
+  Version bumped, bug #152288.
 
   19 Mar 2007; Marius Mauch <genone@gentoo.org>
   acroread-asianfonts-7.0.20050728.ebuild:
